--- a/LevelEdit/MainWindow.xaml
+++ b/LevelEdit/MainWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LevelEdit" xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
         mc:Ignorable="d"
-        Title="MainWindow" Height="400" Width="600">
+        Title="MainWindow" Height="488" Width="600">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="10"/>
             <ColumnDefinition/>
             <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width ="195"/>
+            <ColumnDefinition Width ="145"/>
+            <ColumnDefinition Width="50"/>
             <ColumnDefinition Width="10"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -21,7 +22,7 @@
             <RowDefinition/>
             <RowDefinition Height="10"/>
         </Grid.RowDefinitions>
-        <ScrollViewer Grid.Column="1" Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer x:Name="scrollViewEditor" Grid.Column="1" Grid.Row="1" Grid.RowSpan="3" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
             <ScrollViewer.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0" SpreadMethod="Reflect">
                     <LinearGradientBrush.RelativeTransform>
@@ -36,36 +37,23 @@
                     <GradientStop Color="#FFF100FF" Offset="1"/>
                 </LinearGradientBrush>
             </ScrollViewer.Background>
-            <WindowsFormsHost x:Name="EditorHost" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="256" Height="256">
-                <wf:PictureBox x:Name="Editor" MouseDown="Editor_MouseDown" MouseMove="Editor_MouseMove" MouseEnter="Editor_MouseEnter" MouseLeave="Editor_MouseLeave" MouseUp="Editor_MouseUp"/>
-            </WindowsFormsHost>
+            <Grid x:Name="gridEditor"/>
         </ScrollViewer>
-        <ScrollViewer Grid.Column="1" Grid.Row="3" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-            <ScrollViewer.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0" SpreadMethod="Reflect">
-                    <LinearGradientBrush.RelativeTransform>
-                        <TransformGroup>
-                            <ScaleTransform CenterY="1" CenterX="1" ScaleX="1" ScaleY="0.1"/>
-                            <SkewTransform CenterX="1" CenterY="1"/>
-                            <RotateTransform Angle="45" CenterX="1" CenterY="1"/>
-                            <TranslateTransform X="0"/>
-                        </TransformGroup>
-                    </LinearGradientBrush.RelativeTransform>
-                    <GradientStop Color="#FFA400AD" Offset="0.01"/>
-                    <GradientStop Color="#FFF100FF" Offset="1"/>
-                </LinearGradientBrush>
-            </ScrollViewer.Background>
-            <WindowsFormsHost x:Name="PreviewImageHost" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="256" Height="256">
-                <wf:PictureBox x:Name="PreviewImage"/>
-            </WindowsFormsHost>
-        </ScrollViewer>
-        <Grid Grid.Column="3" Grid.Row="1" Grid.RowSpan="3">
+        <Button x:Name="zoom_plus" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="16" Height="16" Content="+" Click="zoom_plus_Click"/>
+        <Button x:Name="zoom_minus" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="16" Height="16" Margin="16,0,0,0" Content="-" Click="zoom_minus_Click"/>
+        <Grid Grid.Column="3" Grid.Row="1" Grid.RowSpan="3" Grid.ColumnSpan="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="0.4*"/>
                 <ColumnDefinition Width="10"/>
                 <ColumnDefinition Width="0.6*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition Height="28"/>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="28"/>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="28"/>
+                <RowDefinition Height="10"/>
                 <RowDefinition Height="28"/>
                 <RowDefinition Height="10"/>
                 <RowDefinition Height="28"/>
@@ -99,9 +87,11 @@
             <ComboBox Grid.Row ="6" Grid.Column="2" SelectedIndex="0" x:Name="ObjectComboBox">
                 <ComboBoxItem Content="BlueDoor"/>
                 <ComboBoxItem Content="GoldDoor"/>
+                <ComboBoxItem Content="Chest"/>
+                <ComboBoxItem Content="Ammo"/>
+                <ComboBoxItem Content="Health"/>
                 <ComboBoxItem Content="Key"/>
                 <ComboBoxItem Content="Exit"/>
-                <ComboBoxItem Content="Chest"/>
                 <ComboBoxItem Content="Enemy"/>
             </ComboBox>
             <Label Grid.Row="8" Content="Heading" HorizontalAlignment="Right" VerticalAlignment="Center"/>
@@ -117,10 +107,27 @@
                 <ComboBoxItem Content="Foreground"/>
                 <ComboBoxItem Content="Objects"/>
             </ComboBox>
-            <Button Grid.Row ="12" Grid.Column="2" Content="Place Player" x:Name="PlacePlayerButton" HorizontalAlignment="Right" Width="111" Click="PlacePlayerButton_Click"/>
-            <Button Grid.Row ="14" Grid.Column="0" Content="Load" x:Name="LoadButton" Click="LoadButton_Click"/>
-            <Button Grid.Row ="14" Grid.Column="2" Content="Save" x:Name="SaveButton" Click="SaveButton_Click"/>
+            <Label Grid.Row="12" Content="Next Level" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <TextBox Grid.Row ="12" Grid.Column="2" x:Name="LevelTextBox" Text="Credits" VerticalContentAlignment="Center"/>
+            <Label Grid.Row="14" Content="Music" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <ComboBox Grid.Row ="14" Grid.Column="2" SelectedIndex="0" x:Name="MusicComboBox">
+                <ComboBoxItem Content="8BitNostalgia"/>
+                <ComboBoxItem Content="8BitRetroFunk"/>
+                <ComboBoxItem Content="ABitOfHope"/>
+                <ComboBoxItem Content="RetroForest"/>
+            </ComboBox>
+            <Label Grid.Row="16" Content="Goal" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            <ComboBox Grid.Row ="16" Grid.Column="2" SelectedIndex="0" x:Name="GoalComboBox">
+                <ComboBoxItem Content="None"/>
+                <ComboBoxItem Content="Enemies"/>
+                <ComboBoxItem Content="Treasueres"/>
+            </ComboBox>
+            <Button Grid.Row ="18" Grid.Column="2" Content="Place Player" x:Name="PlacePlayerButton" HorizontalAlignment="Right" Width="111" Click="PlacePlayerButton_Click"/>
+            <Button Grid.Row ="19" Grid.Column="0" Content="Load" x:Name="LoadButton" Click="LoadButton_Click" Height="28" Grid.RowSpan="2" VerticalAlignment="Bottom"/>
+            <Button Grid.Row ="22" Grid.Column="2" Content="Save" x:Name="SaveButton" Click="SaveButton_Click"/>
         </Grid>
 
     </Grid>
 </Window>
+
+    
